# mx

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
examples/basic/: README.md  mx.yaml
examples/basic/a/: index.js  package.json
examples/basic/b/: go.mod  main.go
mx-cli/: Cargo.toml  README.md
mx-cli/src/: main.rs
mx-cli/src/cmds/: build.rs  list.rs  mod.rs
mx-cli/src/context/: project.rs
mx-context/: Cargo.toml  README.md
mx-context/src/: lib.rs  prelude.rs
mx-context/src/error/: mod.rs  not_found.rs
mx-context/src/path/: iter.rs  mod.rs
mx-core/: Cargo.toml  README.md
mx-core/src/: lib.rs  prelude.rs
mx-core/src/config/: mod.rs  plugin.rs  project.rs
mx-core/src/plugins/: mod.rs
mx-error/: Cargo.toml  README.md
mx-error/src/: bad_request.rs  dynamic.rs  lib.rs  list.rs  not_found.rs  text.rs
