[workspace]
resolver = "3"
members = ["mx-*"]
default-members = ["mx-*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/mx"
homepage = "https://www.github.com/aacebo/mx"
repository = "https://www.github.com/aacebo/mx"

[workspace.dependencies]
