[package]
name = "mx-cli"
description = "a multi-language build/task orchestration tool."
readme = "README.md"
publish = true
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mx-core = { workspace = true }