[package]
name = "mx-context"
description = "core context sharing/building abstraction."
readme = "README.md"
publish = true
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
mx-error = { workspace = true }