[package]
name = "mx-core"
description = "core types/implementations used by the `mx-cli` crate."
readme = "README.md"
publish = true
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }